chore(workflow): rework release workflow for multi builds (#181)
* chore: remove old release workflow

Signed-off-by: Stefan Dej <meteyou@gmail.com>

Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -5,7 +5,8 @@ on:
       - "master"
       - "develop"
     paths:
-      - "src/**"
+      - "src/modules/**"
+      - "src/build_dist"
       - "config/**"
       - ".github/workflows/BuildImages.yml"
     tags-ignore:
