--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -65,6 +65,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: 'master'
+          fetch-depth: 0
 
       - name: Get latest tag
         id: latest_tag
