Moonraker & docs: fix new include paths

--- a/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
@@ -1,8 +1,6 @@
 # Load the RatOS moonraker defaults
-[include config/moonraker.conf]
- # TODO: Move this to config/moonraker.conf before v2.x beta.
-[server]
-klippy_uds_address: ~/printer_data/comms/klippy.sock 
+[include RatOS/moonraker.conf]
+
 # If you use a non standard ip range in your local network, 
 # you can specify it under trusted_clients here.
 [authorization]
