--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Clone develop repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           ref: "v2.x"
 
       - name: Get current version
