--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Mainsail Discord
-    url: https://discord.gg/skWTwTD
+  - name: Unofficial RatRig Discord
+    url: https://discord.gg/ratrig
     about: Quickest way to get in contact
