--- a/src/modules/armbian/config
+++ b/src/modules/armbian/config
@@ -3,3 +3,6 @@
 
 [ -n "$ARMBIAN_DEPS" ] || ARMBIAN_DEPS="armbian-config avahi-daemon iptables \
 bash-completion"
+[ -n "$ARMBIAN_CONFIG_TXT_FILE" ] || ARMBIAN_CONFIG_TXT_FILE="/boot/armbianEnv.txt"
+[ -n "$ARMBIAN_CONFIG_BAK_FILE" ] || ARMBIAN_CONFIG_BAK_FILE="/boot/armbianEnv.txt.backup"
+[ -n "$ARMBIAN_MODULES_FILE" ] || ARMBIAN_MODULES_FILE="/etc/modules"
