--- a/src/modules/orangepi/config
+++ b/src/modules/orangepi/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 # shellcheck disable=all
 
-[ -n "$ORANGEPI_DEPS" ] || ORANGEPI_DEPS="avahi-daemon iptables \
+[ -n "$ORANGEPI_DEPS" ] || ORANGEPI_DEPS="avahi-daemon iptables unzip \
 bash-completion"
 [ -n "$ORANGEPI_CONFIG_TXT_FILE" ] || ORANGEPI_CONFIG_TXT_FILE="/boot/orangepiEnv.txt"
 [ -n "$ORANGEPI_CONFIG_BAK_FILE" ] || ORANGEPI_CONFIG_BAK_FILE="/boot/orangepiEnv.txt.backup"
