--- a/src/modules/orangepi/config
+++ b/src/modules/orangepi/config
@@ -1,8 +1,17 @@
 #!/bin/bash
+#### MainsailOS Specific Tweaks for orangepi images
+####
+#### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
+#### Copyright 2023 - till today
+#### https://github.com/mainsail-crew/MainsailOS
+####
+#### This File is distributed under GPLv3
+####
+
 # shellcheck disable=all
 
-[ -n "$ORANGEPI_DEPS" ] || ORANGEPI_DEPS="avahi-daemon iptables unzip \
+[[ -n "$ORANGEPI_DEPS" ]] || ORANGEPI_DEPS="avahi-daemon iptables unzip \
 bash-completion"
-[ -n "$ORANGEPI_CONFIG_TXT_FILE" ] || ORANGEPI_CONFIG_TXT_FILE="/boot/orangepiEnv.txt"
-[ -n "$ORANGEPI_CONFIG_BAK_FILE" ] || ORANGEPI_CONFIG_BAK_FILE="/boot/orangepiEnv.txt.backup"
-[ -n "$ORANGEPI_MODULES_FILE" ] || ORANGEPI_MODULES_FILE="/etc/modules"
+[[ -n "$ORANGEPI_CONFIG_TXT_FILE" ]] || ORANGEPI_CONFIG_TXT_FILE="/boot/orangepiEnv.txt"
+[[ -n "$ORANGEPI_CONFIG_BAK_FILE" ]] || ORANGEPI_CONFIG_BAK_FILE="/boot/orangepiEnv.txt.backup"
+[[ -n "$ORANGEPI_MODULES_FILE" ]] || ORANGEPI_MODULES_FILE="/etc/modules"
