fix: fix typo in network_config.txt.template
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/orangepi_net/filesystem/root/boot/network_config.txt.template
+++ b/src/modules/orangepi_net/filesystem/root/boot/network_config.txt.template
@@ -1,6 +1,6 @@
 #-----------------------------------------------------------------
 #
-# MainsailOS (armbian edition) Network Configuration
+# MainsailOS (orangepi edition) Network Configuration
 # Set optional end user configuration
 #    - Rename this file from /boot/network_config.txt.template to /boot/network_config.txt
 #    - Settings below will be applied every time you reboot your machine.
