--- a/src/modules/orangepi/config
+++ b/src/modules/orangepi/config
@@ -20,7 +20,4 @@ bash-completion"
 #### EXPERIMENTAL: Install orangepi-config from source git repo
 [[ -n "$ORANGEPI_INSTALL_OPI_CONFIG" ]] || ORANGEPI_INSTALL_OPI_CONFIG="true"
 [[ -n "$ORANGEPI_OPI_CONFIG_URL" ]] || ORANGEPI_OPI_CONFIG_URL="https://raw.githubusercontent.com/orangepi-xunlong/orangepi-build/next/external/cache/sources/orangepi-config/"
-[[ -n "$ORANGEPI_OPI_CONFIG_FILES" ]] || ORANGEPI_OPI_CONFIG_FILES=( debian-config
-    debian-config-functions debian-config-functions-network
-    debian-config-jobs
-    debian-config-submenu )
+[[ -n "$ORANGEPI_OPI_CONFIG_FILES" ]] || ORANGEPI_OPI_CONFIG_FILES="debian-config debian-config-functions debian-config-functions-network debian-config-jobs debian-config-submenu"
