--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -63,7 +63,9 @@ jobs:
           NOW="$(date +"%Y-%m-%d")"
           IMAGE="${NOW}-${DIST_NAME}-${DIST_VERSION}-${{ steps.build.outputs.type }}-${{ steps.build.outputs.sbc }}"
 
-          sudo mv repository/src/workspace/*.img $IMAGE.img
+          sudo chown "$(whoami)":"$(whoami)" repository/src/workspace/*.img
+          sudo chmod 0777 repository/src/workspace/*.img
+          mv repository/src/workspace/*.img $IMAGE.img
 
           echo "image=${IMAGE}" >> $GITHUB_OUTPUT
 
