--- a/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
+++ b/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
@@ -1,12 +1,11 @@
 [Unit]
-Description=Klipper 3D Printer Firmware SV1
+Description=Klipper 3D Printer Firmware
 Documentation=https://www.klipper3d.org/
 After=network-online.target
 Before=moonraker.service
 Wants=udev.target
 
 [Install]
-Alias=klippy
 WantedBy=multi-user.target
 
 [Service]
