fix: fix typo in description header
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/kiauh/config
+++ b/src/modules/kiauh/config
@@ -2,7 +2,7 @@
 #### KIAUH Install Module
 ####
 #### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
-#### Copyright 2022
+#### Copyright 2022 - till today
 #### https://github.com/mainsail-crew/MainsailOS
 ####
 #### This File is distributed under GPLv3
